--- a/index.html
+++ b/index.html
@@ -12,62 +12,64 @@
     </style>
   </head>
   <body>
-    <div class="side">
-      <!-- Credit to Airam Dato-on from Pexels -->
-      <img id="background" src="assets/background.jpg" />
-      <div class="credits">
-        Photo by Airam Dato-on from
-        <a href="https://www.pexels.com/@airamdphoto/">Pexels</a>
+    <div class="page">
+      <div class="side">
+        <!-- Credit to Airam Dato-on from Pexels -->
+        <img id="background" src="assets/background.jpg" />
+        <div class="credits">
+          Photo by Airam Dato-on from
+          <a href="https://www.pexels.com/@airamdphoto/">Pexels</a>
+        </div>
+        <div class="logo-background">Tokyo Nights</div>
       </div>
-      <div class="logo-background">Tokyo Nights</div>
-    </div>
-    <div class="main">
-      <p>
-        This is not a real online service! Welcome to the first step into the
-        future. Sign up now for exclusive access to a once in a lifetime
-        opportunity!
-      </p>
-      <div class="form-body">
-        <form action="" class="form">
-          <fieldset>
-            <legend>Enter your information</legend>
+      <div class="main">
+        <p>
+          This is not a real online service! Welcome to the first step into the
+          future. Sign up now for exclusive access to a once in a lifetime
+          opportunity!
+        </p>
+        <div class="form-body">
+          <form action="" class="form">
+            <fieldset>
+              <legend>Enter your information</legend>
 
-            <div class="pair">
-              <div class="field">
-                <label for="first_name">First Name*</label>
-                <input type="text" id="first_name" required />
-              </div>
-              <div class="field">
-                <label for="last_name">Last Name*</label>
-                <input type="text" id="last_name" required />
-              </div>
-            </div>
-
-            <div class="pair">
-              <div class="field">
-                <label for="email">Email*</label>
-                <input type="email" id="email" required />
-              </div>
-              <div class="field">
-                <label for="phone">Phone Number*</label>
-                <input type="tel" id="phone" required />
-              </div>
-            </div>
-
-            <div class="pair">
-              <div class="field">
-                <label for="password">Password*</label>
-                <input type="password" id="password" minlength="6" required />
+              <div class="pair">
+                <div class="field">
+                  <label for="first_name">First Name*</label>
+                  <input type="text" id="first_name" required />
+                </div>
+                <div class="field">
+                  <label for="last_name">Last Name*</label>
+                  <input type="text" id="last_name" required />
+                </div>
               </div>
 
-              <div class="field">
-                <label for="confirm">Confirm Password*</label>
-                <input type="password" id="confirm" minlength="6" required />
+              <div class="pair">
+                <div class="field">
+                  <label for="email">Email*</label>
+                  <input type="email" id="email" required />
+                </div>
+                <div class="field">
+                  <label for="phone">Phone Number*</label>
+                  <input type="tel" id="phone" required />
+                </div>
               </div>
-            </div>
-            <button type="submit">Create Account</button>
-          </fieldset>
-        </form>
+
+              <div class="pair">
+                <div class="field">
+                  <label for="password">Password*</label>
+                  <input type="password" id="password" minlength="6" required />
+                </div>
+
+                <div class="field">
+                  <label for="confirm">Confirm Password*</label>
+                  <input type="password" id="confirm" minlength="6" required />
+                </div>
+              </div>
+              <button type="submit">Create Account</button>
+            </fieldset>
+          </form>
+        </div>
       </div>
     </div>
     <script src="" async defer></script>
